adicionado o projeto hotel

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="titulo__container">
             <div class="titulo__apresentacao">
                 <h2 class="titulo__apresentacao_comprimento">Olá, meu nome é André Castro e construo páginas web</h2>
-                <h3 class="titulo__aprenstacao_descricao">Eu estou cursando Análise e Desenvolvimento de Sistemas, atualmente estou participando no projeto Oracle ONE na Alura e buscando minha primeira oportunidade de emprego na área de desenvolvimento web.</h3>
+                <h3 class="titulo__aprenstacao_descricao">Eu estou cursando Análise e Desenvolvimento de Sistemas, atualmente estou criando diversos projetos para meu portfólio e em busca da minha primeira vaga como Desenvolvedor Full Stack</h3>
                 <ul class="titulo__redes">
                     <li class="titulo__redes_item github"><a href="https://github.com/andreivan245" target="_blank">Github<img class="titulo__imagem_seta" src="./assets/arrow.png" alt="seta ilustrativa"></a></li>
                     <li class="titulo__redes_item linkedin"><a href="https://www.linkedin.com/in/andr%C3%A9-castro-3ab614178/" target="_blank">Linkedin<img class="titulo__imagem_seta" src="./assets/arrow.png" alt="seta ilustrativa"></a></li>
@@ -129,8 +129,8 @@
                 <h3 class="projetos__conteudo_descricao_titulo">Conversor de Moeda</h3>
                 <h4 class="projetos__conteudo_descricao_subtitulo">Conversor de Moeda com cotação atualizada</h4>
                 <div class="projetos__conteudo_descricao_botoes">
-                    <button class="projetos__conteudo_botao_repositorio"><a href="https://github.com/andreivan245/Conversor-MoedaV2" target="_blank">Repositório</a></button>
-                    <button class="projetos__conteudo_botao_demo"><a href="https://github.com/andreivan245/Conversor-MoedaV2/archive/refs/heads/main.zip" target="_blank">Ver demo</a></button>
+                    <button class="projetos__conteudo_botao_repositorio"><a href="https://github.com/andreivan245/Conversor-Moeda" target="_blank">Repositório</a></button>
+                    <button class="projetos__conteudo_botao_demo"><a href="https://github.com/andreivan245/Conversor-Moeda/archive/refs/heads/main.zip" target="_blank">Ver demo</a></button>
                 </div>
             </div>
         </div>
@@ -140,8 +140,19 @@
                 <h3 class="projetos__conteudo_descricao_titulo">Conversor de MoedaV2</h3>
                 <h4 class="projetos__conteudo_descricao_subtitulo">Conversor de Moeda com cotação atualizada versão completa</h4>
                 <div class="projetos__conteudo_descricao_botoes">
-                    <button class="projetos__conteudo_botao_repositorio"><a href="https://github.com/andreivan245/GameGeek" target="_blank">Repositório</a></button>
-                    <button class="projetos__conteudo_botao_demo"><a href="https://andreivan245.github.io/GameGeek/" target="_blank">Ver demo</a></button>
+                    <button class="projetos__conteudo_botao_repositorio"><a href="https://github.com/andreivan245/Conversor-MoedaV2" target="_blank">Repositório</a></button>
+                    <button class="projetos__conteudo_botao_demo"><a href="https://github.com/andreivan245/Conversor-MoedaV2/archive/refs/heads/main.zip" target="_blank">Ver demo</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="projetos__conteudo_direita">
+            <img class="projetos__conteudo_img" src="./assets/hotel.png" alt="imagem do projeto do Conversor MoedaV2">
+            <div class="projetos__conteudo_descricao">
+                <h3 class="projetos__conteudo_descricao_titulo">Hotel Java</h3>
+                <h4 class="projetos__conteudo_descricao_subtitulo">Sistema de reserva de Hotel com banco de dados</h4>
+                <div class="projetos__conteudo_descricao_botoes">
+                    <button class="projetos__conteudo_botao_repositorio"><a href="https://github.com/andreivan245/Hotel" target="_blank">Repositório</a></button>
+                    <button class="projetos__conteudo_botao_demo"><a href="https://github.com/andreivan245/Hotel/archive/refs/heads/main.zip" target="_blank">Ver demo</a></button>
                 </div>
             </div>
         </div>
